--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </tfoot>
                   </table>
                 </li>
-                <li><button id="comprar" type="button" class="btn btn-danger">Procesar Compra</button></li>
+                <li><a href="compra.html"><button id="comprar" type="button" class="btn btn-danger">Procesar Compra</button></a></li>
                 <li><button id="vaciarCarrito" type="button" class="btn btn-success btn-sm">Vaciar carrito</button</li>
               </ul>
             </li>
