--- a/compra.html
+++ b/compra.html
@@ -46,8 +46,8 @@
                     <table class="table">
                         <thead>
                           <tr>
-                            <th scope="col">PRODUCTO</th>
-                            <th class="precio" scope="col">PRECIO</th>
+                            <th scope="col">PRODUCTOS</th>
+                            <th class="precio" scope="col">PRECIOS</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -55,11 +55,11 @@
                         </tbody>
                         <tfoot>
                           <tr>
-                            <th class="textoTabla">Subtotal:</td>
+                            <th class="textoTablaST">Subtotal:</td>
                             <th class="subtotal"></td>
                           </tr>
                           <tr>
-                            <th class="textoTabla">TOTAL:</td>
+                            <th class="textoTablaT">TOTAL:</td>
                             <th class="total"></td>
                           </tr>
                         </tfoot>
