--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                         <th scope="col">Eliminar</th>
                       </tr>
                     </thead>
-                    <tbody>
-
-                    </tbody>
+                    <tbody></tbody>
                     <tfoot>
                       <tr>
                         <th class="textoTabla">Subtotal:</td>
@@ -56,7 +54,7 @@
                     </tfoot>
                   </table>
                 </li>
-                <li><a href="compra.html"><button id="comprar" type="button" class="btn btn-danger">Procesar Compra</button></a></li>
+                <li><button id="comprar" type="button" class="btn btn-danger">Procesar Compra</button></li>
                 <li><button id="vaciarCarrito" type="button" class="btn btn-success btn-sm">Vaciar carrito</button</li>
               </ul>
             </li>
