--- a/compra.html
+++ b/compra.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="barraMenu navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid menu">
-                <a class="navbar-brand marca2" href="#"> GH </a>
+                <a class="navbar-brand marca2" href="./index.html"> GH </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,6 +41,7 @@
                 <div class="col-md-3">
                     <label for="validationCustom05" class="form-label">Numero de celular</label>
                     <input type="number" class="form-control" id="validationCustom05" placeholder="ej: 1159876752" required>
+                    <p>*solo números de CABA</p>
                 </div>
                 <div class="listado">
                     <table class="table">
@@ -66,7 +67,8 @@
                       </table>
                 </div>
                 <div class="col-12 boton">
-                    <button class="btn btn-primary" type="submit">Finalizar Compra</button>
+                  <p>Entregas solo en CABA. El pago se realiza en el domicilio.</p>
+                  <button class="btn btn-primary finalizar" type="submit">Finalizar Compra</button>
                 </div>
               </form>
         </section>
