--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         <p class="mega">MEGA</p>
         <p class="sale">SALE</p>
         <p class="hasta">HASTA</p>
-        <p class="dieciocho">18</p>
-        <p class="sinInteres">Sin Interés</p>
+        <p class="diciembre">DICIEMBRE</p>
+        <p class="veinteVeinte">2020</p>
       </div>
-      <a class="linkProducto" href="">
+      <div class="linkProducto">
         <div class="card" style="width: 18rem;">
           <img src="./multimedia/licuadora.jpg" class="card-img-top" alt="licuadora">
           <p class="textoFoto">Licuadora Phillips</p>
@@ -107,8 +107,8 @@
             <p class="cuotas"><span>8x$65  </span>SIN INTERÉS</p>
           </div>
         </div>
-      </a>
-      <a class="linkProducto" href="">
+      </div>
+      <div class="linkProducto">
         <div class="card" style="width: 18rem;">
           <img src="./multimedia/microondas.jpg" class="card-img-top" alt="licuadora">
           <p class="textoFoto">Microondas Whirpool</p>
@@ -118,8 +118,8 @@
             <p class="cuotas"><span>18x$244.44  </span>SIN INTERÉS</p>
           </div>
         </div>
-      </a>
-      <a class="linkProducto" href="">
+      </div>
+      <div class="linkProducto">
         <div class="card" style="width: 18rem;">
           <img src="./multimedia/minipimer.jpg" class="card-img-top" alt="licuadora">
           <p class="textoFoto">Minipimer Phillips</p>
@@ -129,7 +129,7 @@
             <p class="cuotas"><span>12x$300  </span>SIN INTERÉS</p>
           </div>
         </div>
-      </a>
+      </div>
     </section>
   </main>
   <section id="productosVarios">
@@ -340,6 +340,7 @@
     </div>
   </section>
 
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="./js/jquery-3.6.0.min.js"></script>
