--- a/index.html
+++ b/index.html
@@ -86,59 +86,13 @@
     </div>
   </section>
   <br><br>
-  <main class="mainIndex">
-    <br>
-    <h3>MEGA SALE! Hasta <span>40% OFF</span></h3>
-    <section class="megaSale">
-      <div class="descuento">
-        <p class="mega">MEGA</p>
-        <p class="sale">SALE</p>
-        <p class="hasta">HASTA</p>
-        <p class="diciembre">DICIEMBRE</p>
-        <p class="veinteVeinte">2020</p>
-      </div>
-      <div class="linkProducto">
-        <div class="card" style="width: 18rem;">
-          <img src="./multimedia/licuadora.jpg" class="card-img-top" alt="licuadora">
-          <p class="textoFoto">Licuadora Phillips</p>
-          <div class="descripcion">
-            <p class="textoDescripcion"><span class="antes">$800 </span><span class="ahora">  $520</span><span class="porcentaje">35% OFF</span></p>
-            <p class="masIva">+ IVA</p>
-            <p class="cuotas"><span>8x$65  </span>SIN INTERÉS</p>
-          </div>
-        </div>
-      </div>
-      <div class="linkProducto">
-        <div class="card" style="width: 18rem;">
-          <img src="./multimedia/microondas.jpg" class="card-img-top" alt="licuadora">
-          <p class="textoFoto">Microondas Whirpool</p>
-          <div class="descripcion">
-            <p class="textoDescripcion"><span class="antes">$8000 </span><span class="ahora">  $4400</span><span class="porcentaje2">45% OFF</span></p>
-            <p class="masIvaDos">+ IVA</p>
-            <p class="cuotas"><span>18x$244.44  </span>SIN INTERÉS</p>
-          </div>
-        </div>
-      </div>
-      <div class="linkProducto">
-        <div class="card" style="width: 18rem;">
-          <img src="./multimedia/minipimer.jpg" class="card-img-top" alt="licuadora">
-          <p class="textoFoto">Minipimer Phillips</p>
-          <div class="descripcion">
-            <p class="textoDescripcion"><span class="antes">$6000 </span><span class="ahora">  $3600</span><span class="porcentaje2">40% OFF</span></p>
-            <p class="masIvaDos">+ IVA</p>
-            <p class="cuotas"><span>12x$300  </span>SIN INTERÉS</p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <section id="productosVarios">
-    <br><br><br><br>
+  <section id="cajaproductos">
+    <br><br><br>
     <form class="row g-2 formBuscador">
-      <div class="col-md-10">
+      <div class="col-md-6">
         <input id="busqueda" type="text" class="form-control" id="validationDefault01" placeholder="Buscar por nombre" required>
       </div>        
-      <div class="col-md-2">
+      <div class="col-md-1">
         <button id="btnBuscar" class="btn btn-primary botonBuscar" type="submit">BUSCAR</button>
       </div>      
     </form>
