--- a/empresas.html
+++ b/empresas.html
@@ -49,6 +49,7 @@
 
     </section>
     
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src='./js/empresas.js'></script>
 </body>
