--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <input id="busqueda" type="text" class="form-control" id="validationDefault01" placeholder="Buscar por nombre" required>
       </div>        
       <div class="col-md-1">
-        <button id="btnBuscar" class="btn btn-primary botonBuscar" type="submit">BUSCAR</button>
+        <button id="btnBuscar" class="botonBuscar" type="submit">BUSCAR</button>
       </div>      
     </form>
     <div class="productosVarios">
@@ -126,7 +126,7 @@
           <label class="form-check-label" for="flexRadioDefault6">Cortabarba</label>
         </div>
         <div>
-          <button id="btnFiltrar" class="btn btn-primary botonForm" type="submit">Filtrar</button>
+          <button id="btnFiltrar" class="botonForm" type="submit">Filtrar</button>
         </div>
       </div>
       <div class="productos">
@@ -134,160 +134,160 @@
           <p class="tituloFoto">Microondas Phillips</p>
           <img src="./multimedia/microondas00.jpg" class="card-img-top" alt="microondas">           
           <div class="descripcion">
-            <p class="textoDescripcion">15000 + IVA</p>
-            <button id="card microondas phillips" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$15000 + IVA</p>
+            <button id="card microondas phillips" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card microondas lg" style="width: 18rem;">
           <p class="tituloFoto">Microondas LG</p>
           <img src="./multimedia/microondas01.jpg" class="card-img-top" alt="microondas">           
           <div class="descripcion">
-            <p class="textoDescripcion">40000 + IVA</p>
-            <button id="card microondas lg" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$40000 + IVA</p>
+            <button id="card microondas lg" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card microondas whirlpool" style="width: 18rem;">
           <p class="tituloFoto">Microondas Whirlpool</p>
           <img src="./multimedia/microondas02.jpg" class="card-img-top" alt="microondas">           
           <div class="descripcion">
-            <p class="textoDescripcion">20000 + IVA</p>
-            <button id="card microondas whirlpool" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$20000 + IVA</p>
+            <button id="card microondas whirlpool" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card microondas rca" style="width: 18rem;">
           <p class="tituloFoto">Microondas RCA</p>
           <img src="./multimedia/microondas03.jpg" class="card-img-top" alt="microondas">           
           <div class="descripcion">
-            <p class="textoDescripcion">28000 + IVA</p>
-            <button id="card microondas rca" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$28000 + IVA</p>
+            <button id="card microondas rca" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card licuadora oster" style="width: 18rem;">
           <p class="tituloFoto">Licuadora Oster</p>
           <img src="./multimedia/licuadora00.jpg" class="card-img-top" alt="licuadora">  
           <div class="descripcion">
-            <p class="textoDescripcion">7000 + IVA</p>
-            <button id="card licuadora oster" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$7000 + IVA</p>
+            <button id="card licuadora oster" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card licuadora oster dos" style="width: 18rem;">
           <p class="tituloFoto">Licuadora Oster</p>
           <img src="./multimedia/licuadora01.jpg" class="card-img-top" alt="licuadora">  
           <div class="descripcion">
-            <p class="textoDescripcion">7800 + IVA</p>
-            <button id="card licuadora oster dos" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$7800 + IVA</p>
+            <button id="card licuadora oster dos" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card licuadora ventaimportacion" style="width: 18rem;">
           <p class="tituloFoto">Licuadora VentaImportacion</p>
           <img src="./multimedia/licuadora02.jpg" class="card-img-top" alt="licuadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">6000 + IVA</p>
-            <button id="card licuadora ventaimportacion" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$6000 + IVA</p>
+            <button id="card licuadora ventaimportacion" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card licuadora liliana" style="width: 18rem;">
           <p class="tituloFoto">Licuadora Liliana</p>
           <img src="./multimedia/licuadora03.jpg" class="card-img-top" alt="licuadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">9000 + IVA</p>
-            <button id="card licuadora liliana" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$9000 + IVA</p>
+            <button id="card licuadora liliana" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card procesadora liliana" style="width: 18rem;">
           <p class="tituloFoto">Procesadora Liliana</p>
           <img src="./multimedia/procesadora00.jpg" class="card-img-top" alt="procesadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">7000 + IVA</p>
-            <button id="card licuadora liliana" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$7000 + IVA</p>
+            <button id="card licuadora liliana" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card procesadora winco" style="width: 18rem;">
           <p class="tituloFoto">Procesadora Winco</p>
           <img src="./multimedia/procesadora01.jpg" class="card-img-top" alt="procesadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">4500 + IVA</p>
-            <button id="card procesadora winco" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$4500 + IVA</p>
+            <button id="card procesadora winco" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card procesadora liliana dos" style="width: 18rem;">
           <p class="tituloFoto">Procesadora Liliana</p>
           <img src="./multimedia/procesadora02.jpg" class="card-img-top" alt="procesadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">6500 + IVA</p>
-            <button id="card procesadora liliana dos" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$6500 + IVA</p>
+            <button id="card procesadora liliana dos" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card procesadora liliana tres" style="width: 18rem;">
           <p class="tituloFoto">Procesadora Liliana</p>
           <img src="./multimedia/procesadora03.jpg" class="card-img-top" alt="procesadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">6500 + IVA</p>
-            <button id="card procesadora liliana tres" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$6500 + IVA</p>
+            <button id="card procesadora liliana tres" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card secadora phillips" style="width: 18rem;">
           <p class="tituloFoto">Secadora Phillips</p>
           <img src="./multimedia/secadora00.jpg" class="card-img-top" alt="secadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">7500 + IVA</p>
-            <button id="card secadora phillips" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$7500 + IVA</p>
+            <button id="card secadora phillips" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card secadora gama" style="width: 18rem;">
           <p class="tituloFoto">Secadora GAMA</p>
           <img src="./multimedia/secadora01.jpg" class="card-img-top" alt="secadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">5200 + IVA</p>
-            <button id="card secadora gama" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$5200 + IVA</p>
+            <button id="card secadora gama" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card secadora gama dos" style="width: 18rem;">
           <p class="tituloFoto">Secadora GAMA</p>
           <img src="./multimedia/secadora02.jpg" class="card-img-top" alt="secadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">5500 + IVA</p>
-            <button id="card secadora gama dos" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$5500 + IVA</p>
+            <button id="card secadora gama dos" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card secadora revlon" style="width: 18rem;">
           <p class="tituloFoto">Secadora REVLON</p>
           <img src="./multimedia/secadora03.png" class="card-img-top" alt="secadora">           
           <div class="descripcion">
-            <p class="textoDescripcion">4300 + IVA</p>
-            <button id="card secadora revlon" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$4300 + IVA</p>
+            <button id="card secadora revlon" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card cortabarba ducati" style="width: 18rem;">
           <p class="tituloFoto">Cortabarba Ducati</p>
           <img src="./multimedia/cortabarba00.jpg" class="card-img-top" alt="cortabarba">           
           <div class="descripcion">
-            <p class="textoDescripcion">3800 + IVA</p>
-            <button id="card cortabarba ducati" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$3800 + IVA</p>
+            <button id="card cortabarba ducati" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card cortabarba phillips" style="width: 18rem;">
           <p class="tituloFoto">Cortabarba Phillips</p>
           <img src="./multimedia/cortabarba01.png" class="card-img-top" alt="cortabarba">           
           <div class="descripcion">
-            <p class="textoDescripcion">1900 + IVA</p>
-            <button id="card cortabarba phillips" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$1900 + IVA</p>
+            <button id="card cortabarba phillips" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card cortabarba phillips dos" style="width: 18rem;">
           <p class="tituloFoto">Cortabarba Phillips</p>
           <img src="./multimedia/cortabarba02.png" class="card-img-top" alt="cortabarba">           
           <div class="descripcion">
-            <p class="textoDescripcion">2200 + IVA</p>
-            <button id="card cortabarba phillips dos" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$2200 + IVA</p>
+            <button id="card cortabarba phillips dos" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
         <div class="card cortabarba remington" style="width: 18rem;">
           <p class="tituloFoto">Cortabarba Remington</p>
           <img src="./multimedia/cortabarba03.jpg" class="card-img-top" alt="cortabarba">           
           <div class="descripcion">
-            <p class="textoDescripcion">4000 + IVA</p>
-            <button id="card cortabarba remington" class="btn btn-primary botonAgregar" type="submit">AGREGAR</button>
+            <p class="textoDescripcion">$4000 + IVA</p>
+            <button id="card cortabarba remington" class="botonAgregar" type="submit">AGREGAR</button>
           </div>
         </div>
       </div>
