--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#productosVarios">PRODUCTOS</a>
+              <a class="nav-link active" aria-current="page" href="#cajaproductos">PRODUCTOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./empresas.html">Empresas</a>
@@ -126,7 +126,7 @@
           <label class="form-check-label" for="flexRadioDefault6">Cortabarba</label>
         </div>
         <div>
-          <button id="btnFiltrar" class="botonForm" type="submit">Filtrar</button>
+          <button id="btnFiltrar" class="botonForm" type="submit">FILTRAR</button>
         </div>
       </div>
       <div class="productos">
