--- a/compra.html
+++ b/compra.html
@@ -23,25 +23,25 @@
         <section>
             <form class="row mx-auto g-3" novalidate>
                 <div class="col-md-6">
-                  <label for="validationCustom01" class="form-label">Nombre</label>
+                  <label for="validationCustom01" class="form-label">Nombre:</label>
                   <input type="text" class="form-control" id="validationCustom01" placeholder="Ingrese su nombre..." required>
                 </div>
                 <div class="col-md-6">
-                  <label for="validationCustom02" class="form-label">Apellido</label>
+                  <label for="validationCustom02" class="form-label">Apellido:</label>
                   <input type="text" class="form-control" id="validationCustom02" placeholder="Ingrese su apellido..." required>
                 </div>
                 <div class="col-md-6">
-                    <label for="validationCustom03" class="form-label">Dirección</label>
+                    <label for="validationCustom03" class="form-label">Dirección:</label>
                     <input type="text" class="form-control" id="validationCustom03" placeholder="Ingrese su dirección..." required>
                 </div>
                 <div class="col-md-3">
-                    <label for="validationCustom04" class="form-label">Codigo Postal</label>
+                    <label for="validationCustom04" class="form-label">Código Postal:</label>
                     <input type="text" class="form-control" id="validationCustom04" placeholder="Ingrese su CP..." required>
                 </div>
                 <div class="col-md-3">
-                    <label for="validationCustom05" class="form-label">Numero de celular</label>
+                    <label for="validationCustom05" class="form-label">Número de celular:</label>
                     <input type="number" class="form-control" id="validationCustom05" placeholder="ej: 1159876752" required>
-                    <p>*solo números de CABA</p>
+                    <p>*solo números de CABA.</p>
                 </div>
                 <div class="listado">
                     <table class="table">
