--- a/index.html
+++ b/index.html
@@ -88,14 +88,12 @@
   <br><br>
   <section id="cajaproductos">
     <br><br><br>
-    <form class="row g-2 formBuscador">
-      <div class="col-md-6">
-        <input id="busqueda" type="text" class="form-control" id="validationDefault01" placeholder="Buscar por nombre" required>
-      </div>        
-      <div class="col-md-1">
-        <button id="btnBuscar" class="botonBuscar" type="submit">BUSCAR</button>
-      </div>      
-    </form>
+    <div class="formulario">
+      <form class="row formBuscador">
+        <input id="busqueda" type="text" class="form-control" id="validationDefault01" placeholder="Buscar por nombre o marca del producto" required>
+        <button id="btnBuscar" class="botonBuscar" type="submit">BUSCAR</button>    
+      </form>
+    </div>
     <div class="productosVarios">
       <div class="barraLateral">
         <div class="titulo">
