--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             </li>
           </ul>
         </div>
+        <button class="switch" id="switch">
+          <span class="iconify sol" data-icon="fa-solid:sun"></span>
+          <span class="iconify luna" data-icon="bx:bxs-moon"></span>
+        </button>
       </div>
     </nav>
   </header>
