--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </nav>
   </header>
   <section class="logo">
+    <p class="techoCasa">︿</p>
     <h1>GreenHouse</h1>
     <h2>Hacé  de  tu  casa  un  HOGA<span>R</span></h2>
   </section>
